# nextflix

./: Cargo.toml  README.md
src/: database.rs  fts_tree.rs  main.rs  model.rs
templates/: base.html  index.html  login.html  register.html
