[package]
name = "nextflix"
version = "0.1.0"
authors = ["Matthias Deiml <matthias@deiml.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "^0.34"
unic-ucd-category = "^0.9"
actix-web = "^2.0"
actix-rt = "^1.0"
tera = "^1.5"
serde = "^1.0"
actix-identity = "^0.2"
bincode = "^1.3"
